objects/Business_Model_Details__c.object
<CustomObject>
    <description>HKT Business Model Details</description>
    <fields>
        <fullName>Actual_Timeout_Threshold__c</fullName>
        <formula>IF ( ISBLANK( Timeout_Threshold__c) ,  Payment_Method__r.OPP_Timeout_Threshold__c , Timeout_Threshold__c)</formula>
        <label>Actual Timeout Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_LOB_Key__c</fullName>
        <description>Used for lookup base on the Business Code and LOB Code</description>
        <formula>IF(AND(NOT(ISBLANK(Business_Unit_Code__c )),NOT(ISBLANK( LOB_Code__c ))),Business_Unit_Code__c +&apos;-&apos;+LOB_Code__c ,&apos;&apos;)</formula>
        <label>BU LOB Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_LOB_Team_Key__c</fullName>
        <description>Used for lookup base on the Business Code, LOB Code and Team Code</description>
        <formula>IF(AND(NOT(ISBLANK(Business_Unit_Code__c )),NOT(ISBLANK( LOB_Code__c )),NOT(ISBLANK(  Team_Code__c ))),Business_Unit_Code__c +&apos;-&apos;+LOB_Code__c +&apos;-&apos;+Team_Code__c ,&apos;&apos;)</formula>
        <label>BU LOB Team Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <formula>Brand_Name__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Name</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Brand Name)</relationshipLabel>
        <relationshipName>BMD_Brand_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Purpose__c</fullName>
        <label>Business Purpose Hierarchy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FunctionalHierarchy</fullName>
                    <label>Functional Hierarchy</label>
                </value>
                <value>
                    <fullName>EligibilityHierarchy</fullName>
                    <label>Eligibility Hierarchy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit_Code__c</fullName>
        <formula>Business_Unit__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Business Unit)</relationshipLabel>
        <relationshipName>Business_Unit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Code__c</fullName>
        <formula>Channel__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Timeout_Threshold__c</fullName>
        <description>Channel Specific Timeout Threshold</description>
        <label>Channel Timeout Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Sales Channel)</relationshipLabel>
        <relationshipName>BMH_Sales_Channel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>The field will be populated at the time of creating a new record</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Communication_Entity_Code__c</fullName>
        <formula>Communication_Entity_Name__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication Entity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Entity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Communication Entity Name</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>BMH (Communication Entity Name)</relationshipLabel>
        <relationshipName>Communication_Entity_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility_Code__c</fullName>
        <formula>Facility__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Facility)</relationshipLabel>
        <relationshipName>BMH_Facility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOB_Code__c</fullName>
        <formula>LOB__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOB</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Business_Model_Configuration__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>LOB</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (LOB)</relationshipLabel>
        <relationshipName>LOB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_LOB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legacy LOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Code__c</fullName>
        <formula>Org_Unit__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Unit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Name__c</fullName>
        <formula>Org_Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Unit</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Org Unit)</relationshipLabel>
        <relationshipName>Business_Model_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Org_Unit_Code__c</fullName>
        <formula>Parent_Org_Unit__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Org Unit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Org_Unit_Name__c</fullName>
        <formula>Parent_Org_Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Org Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Org_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Org Unit</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Parent Org Unit)</relationshipLabel>
        <relationshipName>Business_Model_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Code__c</fullName>
        <formula>Payment_Method__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Group_Code__c</fullName>
        <formula>Payment_Method_Group__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method Group</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Payment Method Group)</relationshipLabel>
        <relationshipName>Business_Model_Details4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Payment Method)</relationshipLabel>
        <relationshipName>Business_Model_Details5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pickup_Code__c</fullName>
        <formula>Pickup_Name__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pickup Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup Name</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Pickup Name)</relationshipLabel>
        <relationshipName>BMD_Pickup_Channel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Public Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_PublicGroup_Key__c</fullName>
        <description>Used for lookup base on the Record Type Developer Name and Public Group</description>
        <formula>IF(AND(NOT(ISBLANK(RecordType.DeveloperName)),NOT(ISBLANK( Public_Group__c))),RecordType.DeveloperName +&apos;-&apos;+Public_Group__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType PublicGroup Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Code__c</fullName>
        <formula>Team__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is PCM Public Group Mapping, for detail can refer
https://pccw0-my.sharepoint.com/:p:/g/personal/xsf00001_corphq_hk_pccw_com/EcK--eVhwilDpzLva-WmJe4B9h407mqP_syLth2MRtRguA</inlineHelpText>
        <label>Team</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Team)</relationshipLabel>
        <relationshipName>Business_Model_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timeout_Threshold__c</fullName>
        <label>Timeout Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse_Code__c</fullName>
        <formula>Warehouse__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warehouse Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Details (Warehouse)</relationshipLabel>
        <relationshipName>BMH_Warehouse</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Model Details</label>
    <listViews>
        <fullName>All_Comm_Entity_Mapping</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Channel_Code__c</columns>
        <columns>Communication_Entity_Name__c</columns>
        <columns>Communication_Entity_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Details__c.Communication_Entity_Mapping</value>
        </filters>
        <label>Communication Entity Mapping</label>
    </listViews>
    <listViews>
        <fullName>All_Facility_Mapping</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Channel_Code__c</columns>
        <columns>Facility__c</columns>
        <columns>Facility_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Details__c.Chnanel_Facility_Mapping</value>
        </filters>
        <label>Channel Facility Mapping</label>
    </listViews>
    <listViews>
        <fullName>All_LOB_BU_PG_Mapping</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Business_Unit_Code__c</columns>
        <columns>LOB__c</columns>
        <columns>LOB_Code__c</columns>
        <columns>Public_Group__c</columns>
        <columns>Status__c</columns>
        <columns>RecordType_PublicGroup_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Details__c.Lob_Bu_Public_Group_Mapping</value>
        </filters>
        <label>LOB BU Public Group Mapping</label>
    </listViews>
    <listViews>
        <fullName>All_Warehouse_Mapping</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Channel_Code__c</columns>
        <columns>LOB__c</columns>
        <columns>LOB_Code__c</columns>
        <columns>Pickup_Name__c</columns>
        <columns>Pickup_Code__c</columns>
        <columns>Warehouse__c</columns>
        <columns>Warehouse_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Details__c.Channel_Warehouse_Mapping</value>
        </filters>
        <label>Channel Warehouse Mapping</label>
    </listViews>
    <listViews>
        <fullName>COM_Fulfillment_PG_Mapping</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Channel_Code__c</columns>
        <columns>Public_Group__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Details__c.COM_Fullfillment_Public_Group_Mapping</value>
        </filters>
        <label>COM Fulfillment Public Group Mapping</label>
    </listViews>
    <listViews>
        <fullName>COM_Shop_Pickup_PG_Mapping</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Channel_Code__c</columns>
        <columns>Public_Group__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Details__c.COM_Shop_Pickup_Public_Group_Mapping</value>
        </filters>
        <label>COM Shop Pickup Public Group Mapping</label>
    </listViews>
    <listViews>
        <fullName>EPC_Public_Group_Mapping</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Business_Unit_Code__c</columns>
        <columns>LOB__c</columns>
        <columns>LOB_Code__c</columns>
        <columns>Team__c</columns>
        <columns>Team_Code__c</columns>
        <columns>Public_Group__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Details__c.EPC_Public_Group_Mapping</value>
        </filters>
        <label>EPC Public Group Mapping</label>
    </listViews>
    <listViews>
        <fullName>Eligibility_Consumer_Group</fullName>
        <columns>NAME</columns>
        <columns>Business_Purpose__c</columns>
        <columns>Org_Unit__c</columns>
        <columns>Org_Unit_Code__c</columns>
        <columns>Parent_Org_Unit__c</columns>
        <columns>Parent_Org_Unit_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Purpose__c</field>
            <operation>equals</operation>
            <value>EligibilityHierarchy</value>
        </filters>
        <filters>
            <field>Org_Unit_Code__c</field>
            <operation>contains</operation>
            <value>CNG</value>
        </filters>
        <label>Eligibility - Consumer Group</label>
    </listViews>
    <listViews>
        <fullName>Eligibility_Consumer_Mobile</fullName>
        <columns>NAME</columns>
        <columns>Business_Purpose__c</columns>
        <columns>Org_Unit__c</columns>
        <columns>Org_Unit_Code__c</columns>
        <columns>Parent_Org_Unit__c</columns>
        <columns>Parent_Org_Unit_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Purpose__c</field>
            <operation>equals</operation>
            <value>EligibilityHierarchy</value>
        </filters>
        <filters>
            <field>Org_Unit_Code__c</field>
            <operation>contains</operation>
            <value>CNM</value>
        </filters>
        <label>Eligibility - Consumer Mobile</label>
    </listViews>
    <listViews>
        <fullName>Eligibility_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Business_Purpose__c</columns>
        <columns>Org_Unit__c</columns>
        <columns>Org_Unit_Code__c</columns>
        <columns>Parent_Org_Unit__c</columns>
        <columns>Parent_Org_Unit_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Purpose__c</field>
            <operation>equals</operation>
            <value>EligibilityHierarchy</value>
        </filters>
        <label>Eligibility Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>Functional_Commercial_Mobile</fullName>
        <columns>NAME</columns>
        <columns>Business_Purpose__c</columns>
        <columns>Org_Unit__c</columns>
        <columns>Org_Unit_Code__c</columns>
        <columns>Parent_Org_Unit__c</columns>
        <columns>Parent_Org_Unit_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Purpose__c</field>
            <operation>equals</operation>
            <value>FunctionalHierarchy</value>
        </filters>
        <filters>
            <field>Org_Unit_Code__c</field>
            <operation>contains</operation>
            <value>CMM</value>
        </filters>
        <label>Functional - Commercial Mobile</label>
    </listViews>
    <listViews>
        <fullName>Functional_Consumer_Group</fullName>
        <columns>NAME</columns>
        <columns>Business_Purpose__c</columns>
        <columns>Org_Unit__c</columns>
        <columns>Org_Unit_Code__c</columns>
        <columns>Parent_Org_Unit__c</columns>
        <columns>Parent_Org_Unit_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Purpose__c</field>
            <operation>equals</operation>
            <value>FunctionalHierarchy</value>
        </filters>
        <filters>
            <field>Org_Unit_Code__c</field>
            <operation>contains</operation>
            <value>CNG</value>
        </filters>
        <label>Functional - Consumer Group</label>
    </listViews>
    <listViews>
        <fullName>Functional_Consumer_Mobile</fullName>
        <columns>NAME</columns>
        <columns>Business_Purpose__c</columns>
        <columns>Org_Unit__c</columns>
        <columns>Org_Unit_Code__c</columns>
        <columns>Parent_Org_Unit__c</columns>
        <columns>Parent_Org_Unit_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Purpose__c</field>
            <operation>equals</operation>
            <value>FunctionalHierarchy</value>
        </filters>
        <filters>
            <field>Org_Unit_Code__c</field>
            <operation>contains</operation>
            <value>CNM</value>
        </filters>
        <label>Functional - Consumer Mobile</label>
    </listViews>
    <listViews>
        <fullName>Functional_Hierarchy</fullName>
        <columns>NAME</columns>
        <columns>Business_Purpose__c</columns>
        <columns>Org_Unit__c</columns>
        <columns>Org_Unit_Code__c</columns>
        <columns>Parent_Org_Unit__c</columns>
        <columns>Parent_Org_Unit_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Purpose__c</field>
            <operation>equals</operation>
            <value>FunctionalHierarchy</value>
        </filters>
        <filters>
            <field>Org_Unit_Code__c</field>
            <operation>equals</operation>
            <value>CT_CNM_SH_TEAM1</value>
        </filters>
        <label>Functional Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>Functional_NOWTV</fullName>
        <columns>NAME</columns>
        <columns>Business_Purpose__c</columns>
        <columns>Org_Unit__c</columns>
        <columns>Org_Unit_Code__c</columns>
        <columns>Parent_Org_Unit__c</columns>
        <columns>Parent_Org_Unit_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Purpose__c</field>
            <operation>equals</operation>
            <value>FunctionalHierarchy</value>
        </filters>
        <filters>
            <field>Org_Unit_Code__c</field>
            <operation>contains</operation>
            <value>NOW</value>
        </filters>
        <label>Functional - NOWTV</label>
    </listViews>
    <nameField>
        <displayFormat>BMD-{YYYY}{MM}-{0}</displayFormat>
        <label>Business Model Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Model Details</pluralLabel>
    <recordTypes>
        <fullName>Business_Purpose</fullName>
        <active>true</active>
        <label>Business Purpose</label>
    </recordTypes>
    <recordTypes>
        <fullName>COM_Fullfillment_Public_Group_Mapping</fullName>
        <active>true</active>
        <label>COM Fullfillment Public Group Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>COM_Shop_Pickup_Public_Group_Mapping</fullName>
        <active>true</active>
        <label>COM Shop Pickup Public Group Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_Warehouse_Mapping</fullName>
        <active>true</active>
        <label>Channel Warehouse Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chnanel_Facility_Mapping</fullName>
        <active>true</active>
        <label>Channel Facility Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>Communication_Entity_Mapping</fullName>
        <active>true</active>
        <label>Communication Entity Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EPC_Public_Group_Mapping</fullName>
        <active>false</active>
        <label>[obsolete] EPC Public Group Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOB_Brand_Mapping</fullName>
        <active>true</active>
        <label>LOB Brand Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOB_and_Legacy_LOB_Mapping</fullName>
        <active>true</active>
        <label>LOB and Legacy LOB Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lob_Bu_Public_Group_Mapping</fullName>
        <active>true</active>
        <label>LOB BU Public Group Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payment_Method_Group_Detail</fullName>
        <active>true</active>
        <label>Payment Method Group Detail</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>